# openapi/openapi.json
@@ -195,11 +195,33 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "maxLength": 64,
+                                        "minLength": 2,
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    },
+                    "required": false
+                },
                 "responses": {
                     "200": {
                         "content": {
                             "application/json": {
                                 "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/PartyResource"
+                                        }
+                                    },
                                     "type": "object"
                                 }
                             }
@@ -208,6 +230,9 @@
                     },
                     "401": {
                         "description": "Unauthenticated."
+                    },
+                    "422": {
+                        "description": "Validation failed."
                     }
                 },
                 "security": [
@@ -232,11 +257,33 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "maxLength": 64,
+                                        "minLength": 2,
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    },
+                    "required": false
+                },
                 "responses": {
                     "200": {
                         "content": {
                             "application/json": {
                                 "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/PartyResource"
+                                        }
+                                    },
                                     "type": "object"
                                 }
                             }
@@ -245,6 +292,9 @@
                     },
                     "401": {
                         "description": "Unauthenticated."
+                    },
+                    "422": {
+                        "description": "Validation failed."
                     }
                 },
                 "security": [
@@ -374,6 +424,45 @@
                     }
                 ],
                 "summary": "api.v1.parties.join"
+            }
+        },
+        "/api/v1/parties/{party}/log": {
+            "get": {
+                "operationId": "getApiV1PartiesPartyLog",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "party",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        },
+                        "description": "Successful response."
+                    },
+                    "401": {
+                        "description": "Unauthenticated."
+                    }
+                },
+                "security": [
+                    {
+                        "sanctumBearer": []
+                    },
+                    {
+                        "sanctumCookie": []
+                    }
+                ],
+                "summary": "api.v1.parties.log"
             }
         },
         "/api/v1/parties/{party}/playedsongs/{playedsong}/rate": {
