# routes/web.php
@@ -18,6 +18,12 @@ Route::middleware('auth')->group(function () {
     Route::get('parties/create', [PartyController::class, 'create'])->name('parties.create');
     Route::post('parties', [PartyController::class, 'store'])->name('parties.store');
     Route::post('parties/join', [PartyController::class, 'join'])->name('parties.join');
+    Route::get('parties/{party}/log', [PartyController::class, 'log'])
+        ->where('party', '[A-Za-z]{4}')
+        ->name('parties.log');
+    Route::patch('parties/{party}', [PartyController::class, 'update'])
+        ->where('party', '[A-Za-z]{4}')
+        ->name('parties.update');
     Route::get('parties/{party}/{section?}', [PartyController::class, 'show'])
         ->where('party', '[A-Za-z]{4}')
         ->where('section', 'queue|search|history|party')
